npeditor-cilium.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: mypolicyv1
  namespace: starwars
spec:
  endpointSelector:
    matchLabels:
      app: frontend
      env: production
  ingress:
    - fromEndpoints:
        - {}
    - fromEndpoints:
        - matchLabels:
            app: frontend
            version: "2"
      toPorts:
        - ports:
            - port: "443"
        - ports:
            - port: "80"
    - fromEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
        - ports:
            - port: "80"
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - {}
    - toEndpoints:
        - matchLabels:
            app: frontend
            version: "2"
      toPorts:
        - ports:
            - port: "443"
        - ports:
            - port: "80"
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
        - ports:
            - port: "80"
    - toCIDRSet:
        - cidr: 10.99.99.0/24
      toPorts:
        - ports:
            - port: "443"
        - ports:
            - port: "80"
    - toFQDNs:
        - matchName: cilium.io
      toPorts:
        - ports:
            - port: "443"
        - ports:
            - port: "80"
